--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:onClick="openNewActivity"
             android:text="@string/btnSend" />
 
         <Button
@@ -48,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:onClick="openNewActivity"
             android:text="@string/btnCancel" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
